# data-science

./: README.md  devenv.nix  exercise01.ipynb  exercise02.ipynb  pyproject.toml
exercise00/: intro.ipynb
scripts/: qm-scraper.py
